--- a/interface.html
+++ b/interface.html
@@ -2,6 +2,7 @@
     <head>
         <title>hackathon project</title>
         <link rel="stylesheet" href="interface.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" >
     </head>
     <body>
         <div class="banner">
@@ -16,10 +17,10 @@
                 </ul>
             </div>
             <div class="content">
-                <h2>log your levels</h2>
-                <p>energy</p>
-                <p>focus</p>
-                <p>motivation</p>
+                <h2>Log your levels</h2>
+                <p>Energy</p>
+                <p>Focus</p>
+                <p>Motivation</p>
                 
                 <div class="multirate">
                     <ul>
@@ -46,6 +47,45 @@
                         </div></li>
                     </ul>
                 </div>
+
+
+
+                <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Sales', 'Expenses'],
+          ['2004',  1000,      400],
+          ['2005',  1170,      460],
+          ['2006',  660,       1120],
+          ['2007',  1030,      540]
+        ]); 
+        //<!-- THE DATABASE IS DISPLAYED HERE--> 
+
+        var options = {
+          title: 'Company Performance',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+    <div id="curve_chart" sclass="chart1"></div>
+  </body>
+
+
+
+
+
+
             </div>
         </div>
     </body>
